[package]
name = "lighthouse_keeper"
version = "0.1.0"
authors = ["Golodnyi <ochen@golodnyi.ru>"]

[dependencies]
telegram-bot = "0.6"
futures = "0.1.23"
tokio-core = "0.1.17"
serde_json = "1.0.26"
serde_derive = "1.0.76"
serde = "1.0.76"
reader = { path = "src/reader/src", version = "*" }
structs = { path = "src/structs/src", version = "*" }
commands = { path = "src/commands/src", version = "*" }