[package]
name = "commands"
version = "0.1.0"
authors = ["Golodnyi <ochen@golodnyi.ru>"]
[lib]
name = "commands"
path = "lib.rs"
[dependencies]
structs = { path = "../../structs/src", version = "*" }
humantime = "1.1.1"
serde_json = "1.0.26"
serde = "1.0.76"
reader = { path = "../../reader/src", version = "*" }
telegram-bot = "0.6"