[package]
name = "commands"
version = "0.1.0"
authors = ["Golodnyi <ochen@golodnyi.ru>"]
[lib]
name = "commands"
path = "lib.rs"
[dependencies]
structs = { path = "../../structs/src", version = "*" }
humantime = "1.1.1"
db = { path = "../../db/src", version = "*" }
telegram-bot = "0.6"
serde_derive = "1.0.78"
serde = "1.0.78"
serde_json = "1.0.27"
reqwest = "0.8.8"